--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -10,6 +10,7 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="css/general.css" rel="stylesheet" />
     <link href="css/dashboard.css" rel="stylesheet" />
     <link href="css/settings.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
