--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -13,6 +13,8 @@
     <link href="css/general.css" rel="stylesheet" />
     <link href="css/dashboard.css" rel="stylesheet" />
     <link href="css/settings.css" rel="stylesheet" />
+
+    <link href="css/Register.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="ProServ.Client.styles.css" rel="stylesheet" />
     <link
