--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -13,6 +13,7 @@
     <link href="css/general.css" rel="stylesheet" />
     <link href="css/dashboard.css" rel="stylesheet" />
     <link href="css/settings.css" rel="stylesheet" />
+    <link href="css/output.css" rel="stylesheet">
 
     <link href="css/Register.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -44,6 +45,10 @@
                 }
             }
             return "";
+        }
+
+        window.getTimezoneOffset = function () {
+            return new Date().getTimezoneOffset();
         }
     </script>
 
