--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -54,7 +54,7 @@
 
   </head>
 
-  <body>
+  <body style="background: none !important;">
     <div id="app">
       <svg class="loading-progress">
         <circle r="40%" cx="50%" cy="50%" />
