--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -14,6 +14,7 @@
     <link href="css/dashboard.css" rel="stylesheet" />
     <link href="css/settings.css" rel="stylesheet" />
     <link href="css/output.css" rel="stylesheet">
+    <link href="css/AthleteCenter.css" rel="stylesheet" />
 
     <link href="css/Register.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
